# Attributes

./: .gitmodules  CMakeLists.txt  README.md
Attributes/: CMakeLists.txt
Attributes/include/: attributes.hpp
Attributes/include/attributes/: abstract_attribute.hpp  array_attribute.hpp  bool_attribute.hpp  choice_attribute.hpp  cloud_attribute.hpp  color_attribute.hpp  color_gradient_attribute.hpp  enum_attribute.hpp  filename_attribute.hpp  float_attribute.hpp  helpers.hpp  int_attribute.hpp  logger.hpp  map_enum_attribute.hpp  path_attribute.hpp  range_attribute.hpp  resolution_attribute.hpp  seed_attribute.hpp  string_attribute.hpp  vec2float_attribute.hpp  vec_float_attribute.hpp  vec_int_attribute.hpp  wave_nb_attribute.hpp
Attributes/include/attributes/widgets/: abstract_widget.hpp  array_widget.hpp  attributes_widget.hpp  bool_widget.hpp  choice_widget.hpp  cloud_widget.hpp  color_gradient_widget.hpp  color_widget.hpp  colorbar_widget.hpp  enum_widget.hpp  filename_widget.hpp  float_widget.hpp  inspector_widget.hpp  int_widget.hpp  map_enum_widget.hpp  path_widget.hpp  range_widget.hpp  resolution_widget.hpp  seed_widget.hpp  string_widget.hpp  vec2float_widget.hpp  vec_float_widget.hpp  (+3 more)
Attributes/src/: abstract_attribute.cpp  array_attribute.cpp  attributes_widget.cpp  bool_attribute.cpp  choice_attribute.cpp  cloud_attribute.cpp  color_attribute.cpp  color_gradient_attribute.cpp  enum_attribute.cpp  filename_attribute.cpp  float_attribute.cpp  helpers.cpp  int_attribute.cpp  logger.cpp  map_enum_attribute.cpp  map_enum_widget.cpp  path_attribute.cpp  range_attribute.cpp  resolution_attribute.cpp  seed_attribute.cpp  string_attribute.cpp  vec2float_attribute.cpp  vec_float_attribute.cpp  vec_int_attribute.cpp  wave_nb_attribute.cpp
Attributes/src/widgets/: abstract_widget.cpp  attributes_widget.cpp  bool_widget.cpp  choice_widget.cpp  cloud_widget.cpp  color_gradient_widget.cpp  color_widget.cpp  colorbar_widget.cpp  enum_widget.cpp  filename_widget.cpp  float_widget.cpp  inspector_widget.cpp  int_vec_widget.cpp  int_widget.cpp  map_enum_widget.cpp  range_widget.cpp  resolution_widget.cpp  seed_widget.cpp  string_widget.cpp  vec2float_widget.cpp  vec_float_widget.cpp  vec_int_widget.cpp  wave_nb_widget.cpp  widget_utils.cpp
(+12 files in other folders)
